<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:background="#428bca">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/profile_pic"/>
    </android.support.v7.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/women"/>
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_description"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#000"
                android:textSize="16dp"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                android:text="@string/content_name"/>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_address"
                android:text="Address:"
                android:textSize="17dp"
                 android:textColor="#000"
                    />
                <TextView
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16dp"
                    android:textColor="#000"
                    android:text="@string/address"
            />
            </LinearLayout>
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txt_buss"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="16dp"
                            android:textColor="#000"
                            android:layout_marginTop="5dp"
                            android:text="Business Hours:"
                            />
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:entries="@array/country_arrays"
                    android:prompt="@string/country_prompt" />
                    </LinearLayout>
            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_site_url_title"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:text="Website:"
                />
                 <TextView
                     android:id="@+id/txt_site_url"
                     android:layout_marginLeft="5dp"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="16dp"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/wallet_holo_blue_light"
                     android:text="@string/site_url"
                     />
             </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:layout_weight="0.45">
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>